Upgrade to JDK22